# SnowPanel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.host-agent.yml  docker-compose.local.yml  docker-compose.observability.yml  docker-compose.yml
.claude/: change-cache.md  progress.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  observability-smoke.yml
backend/: Dockerfile  README.md  go.mod  go.sum
backend/migrations/: README.md  (+2 more)
core-agent/: Cargo.toml  Dockerfile  README.md  build.rs
core-agent/src/: main.rs
core-agent/src/api/: grpc_server.rs  mod.rs
core-agent/src/config/: mod.rs
core-agent/src/cron/: mod.rs  service.rs
core-agent/src/docker/: mod.rs  service.rs
core-agent/src/file/: mod.rs  service.rs
core-agent/src/observability/: metrics.rs  tracing.rs
core-agent/src/process/: mod.rs  systemd_service.rs
core-agent/src/security/: mod.rs  path_validator.rs
core-agent/src/service/: mod.rs  system_info.rs
core-agent/src/system/: mod.rs
deploy/: README.md  README.zh-CN.md
docs/: api-design.md  api-design.zh-CN.md  architecture.md  architecture.zh-CN.md  deployment.md  deployment.zh-CN.md  development.md  development.zh-CN.md  observability-validation.md  observability-validation.zh-CN.md  observability.md  observability.zh-CN.md  roadmap.md  roadmap.zh-CN.md  security.md  security.zh-CN.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
proto/: README.md
(+158 files in other folders)
