[package]
name = "core-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
prost = "0.13"
sysinfo = "0.31"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.12"
