[package]
name = "core-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bollard = "0.17"
once_cell = "1.20"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"] }
prometheus = "0.13"
prost = "0.13"
sysinfo = "0.31"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
